Fixed Dark Mode
Scroll triggers dark mode when user over portfolio section.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -315,6 +315,10 @@ footer::before{
   opacity: .7;
 }
 
+.darkMode .blogPanel {
+  background: black;
+}
+
 
 
 /* post page */
@@ -559,7 +563,6 @@ footer::before{
   margin: 0px auto;
   display: block;
   font-size: 5rem;
-  width: 75px;
   height: 75px;
   padding: 20px;
   position: relative;
@@ -595,7 +598,7 @@ footer::before{
 .portfolioPanel{
   z-index: 2;
   position: relative;
-  height: 2000px;
+  height: fit-content;
 }
 
 .portfolioItems {
@@ -662,7 +665,7 @@ footer::before{
 
 .portfolioImg {
   width: 100%;
-  height: 600px;
+  min-height: 600px;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -719,12 +722,18 @@ footer::before{
   font-family: 'Inter', sans-serif;
 }
 
+.portfolioLinks {
+  display: flex;
+  gap: 20px;
+  font-size: 1.2rem;
+}
 
 /* blog panel  */
 
 .blogPanel{
   background: white;
   position: relative;
+  transition: .3s ease;
 }
 
 /* contact panel  */
